Added a auto-generated note at the top of a generated bulma css file

--- a/bulma.sass
+++ b/bulma.sass
@@ -1,4 +1,5 @@
 @charset "utf-8"
+/* This is auto generated go to repo to generate */
 /*! bulma.io v0.6.2 | MIT License | github.com/jgthms/bulma */
 @import "sass/utilities/_all"
 @import "sass/base/_all"
