--- a/themes/reportingPanelTheme.css
+++ b/themes/reportingPanelTheme.css
@@ -3319,6 +3319,184 @@ a.tag:hover {
   text-align: center;
   vertical-align: top; }
 
+.accordions .accordion {
+  display: flex;
+  flex-direction: column;
+  background-color: whitesmoke;
+  border-radius: 3px;
+  font-size: 1rem; }
+  .accordions .accordion:not(:last-child) {
+    margin-bottom: 1.5rem; }
+  .accordions .accordion strong {
+    color: currentColor; }
+  .accordions .accordion a:not(.button):not(.tag) {
+    color: currentColor;
+    text-decoration: underline; }
+  .accordions .accordion.is-small {
+    font-size: 0.75rem; }
+  .accordions .accordion.is-medium {
+    font-size: 1.25rem; }
+  .accordions .accordion.is-large {
+    font-size: 1.5rem; }
+  .accordions .accordion:not(:first-child) .accordion-header {
+    border-radius: 0; }
+  .accordions .accordion:not(:last-child) {
+    margin-bottom: 0; }
+    .accordions .accordion:not(:last-child) .accordion-content {
+      border-radius: 0; }
+  .accordions .accordion .toggle,
+  .accordions .accordion [data-action="toggle"] {
+    cursor: pointer; }
+  .accordions .accordion .accordion-header {
+    align-items: center;
+    background-color: #4a4a4a;
+    border-radius: 3px 3px 0 0;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    line-height: 1.25;
+    padding: 0.5em 0.75em;
+    position: relative; }
+    .accordions .accordion .accordion-header .toggle {
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      -moz-appearance: none;
+      -webkit-appearance: none;
+      background-color: rgba(10, 10, 10, 0.2);
+      border: none;
+      border-radius: 290486px;
+      display: inline-block;
+      flex-grow: 0;
+      flex-shrink: 0;
+      margin-left: 0.75em;
+      height: 20px;
+      width: 20px;
+      max-height: 20px;
+      max-width: 20px;
+      min-height: 20px;
+      min-width: 20px;
+      outline: none;
+      position: relative;
+      vertical-align: top; }
+      .accordions .accordion .accordion-header .toggle::before {
+        color: white;
+        display: block;
+        left: 0;
+        position: absolute;
+        top: -0.1em;
+        right: 0;
+        bottom: 0;
+        content: "+"; }
+      .accordions .accordion .accordion-header .toggle::after {
+        display: none; }
+    .accordions .accordion .accordion-header + .accordion-body {
+      overflow-y: hidden;
+      max-height: 0;
+      color: #4a4a4a;
+      border: 1px solid #dbdbdb;
+      border-radius: 3px;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+      border-top: none;
+      -webkit-transition: max-height 0.2s ease;
+      -moz-transition: max-height 0.2s ease;
+      -o-transition: max-height 0.2s ease;
+      transition: max-height 0.2s ease; }
+      .accordions .accordion .accordion-header + .accordion-body .accordion-content {
+        padding: 1em 1.25em; }
+        .accordions .accordion .accordion-header + .accordion-body .accordion-content code,
+        .accordions .accordion .accordion-header + .accordion-body .accordion-content pre {
+          background-color: white; }
+        .accordions .accordion .accordion-header + .accordion-body .accordion-content pre code {
+          background-color: transparent; }
+  .accordions .accordion.is-active .accordion-header .toggle::before {
+    content: "-"; }
+  .accordions .accordion.is-active .accordion-body {
+    max-height: 100em; }
+  .accordions .accordion.is-white {
+    background-color: white; }
+    .accordions .accordion.is-white .accordion-header {
+      background-color: white;
+      color: #0a0a0a; }
+    .accordions .accordion.is-white .accordion-content {
+      border-color: white;
+      color: #4d4d4d; }
+  .accordions .accordion.is-black {
+    background-color: #fafafa; }
+    .accordions .accordion.is-black .accordion-header {
+      background-color: #0a0a0a;
+      color: white; }
+    .accordions .accordion.is-black .accordion-content {
+      border-color: #0a0a0a;
+      color: #0a0a0a; }
+  .accordions .accordion.is-light {
+    background-color: #fafafa; }
+    .accordions .accordion.is-light .accordion-header {
+      background-color: whitesmoke;
+      color: #272727; }
+    .accordions .accordion.is-light .accordion-content {
+      border-color: whitesmoke;
+      color: #4f4f4f; }
+  .accordions .accordion.is-dark {
+    background-color: #fafafa; }
+    .accordions .accordion.is-dark .accordion-header {
+      background-color: #272727;
+      color: whitesmoke; }
+    .accordions .accordion.is-dark .accordion-content {
+      border-color: #272727;
+      color: #202020; }
+  .accordions .accordion.is-primary {
+    background-color: #fafafa; }
+    .accordions .accordion.is-primary .accordion-header {
+      background-color: #272727;
+      color: #fff; }
+    .accordions .accordion.is-primary .accordion-content {
+      border-color: #272727;
+      color: #202020; }
+  .accordions .accordion.is-link {
+    background-color: #f6fcfe; }
+    .accordions .accordion.is-link .accordion-header {
+      background-color: #72d0eb;
+      color: rgba(0, 0, 0, 0.7); }
+    .accordions .accordion.is-link .accordion-content {
+      border-color: #72d0eb;
+      color: #1d596b; }
+  .accordions .accordion.is-info {
+    background-color: #f6fbfe; }
+    .accordions .accordion.is-info .accordion-header {
+      background-color: #209cee;
+      color: #fff; }
+    .accordions .accordion.is-info .accordion-content {
+      border-color: #209cee;
+      color: #12537e; }
+  .accordions .accordion.is-success {
+    background-color: #f6fef9; }
+    .accordions .accordion.is-success .accordion-header {
+      background-color: #23d160;
+      color: #fff; }
+    .accordions .accordion.is-success .accordion-content {
+      border-color: #23d160;
+      color: #0e311a; }
+  .accordions .accordion.is-warning {
+    background-color: #fffcf5; }
+    .accordions .accordion.is-warning .accordion-header {
+      background-color: #FFBD2E;
+      color: rgba(0, 0, 0, 0.7); }
+    .accordions .accordion.is-warning .accordion-content {
+      border-color: #FFBD2E;
+      color: #473307; }
+  .accordions .accordion.is-danger {
+    background-color: #fff5f5; }
+    .accordions .accordion.is-danger .accordion-header {
+      background-color: #FF6159;
+      color: #fff; }
+    .accordions .accordion.is-danger .accordion-content {
+      border-color: #FF6159;
+      color: #d1150b; }
+
 .breadcrumb {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
