Fixing the background color for the accordions

--- a/sass/extensions/bulma-accordion.sass
+++ b/sass/extensions/bulma-accordion.sass
@@ -130,7 +130,7 @@ $accordion-content-pre-code-background-color: transparent !default
       $darken-percentage: $color-luminance * 70%
       $desaturate-percentage: $color-luminance * 30%
       &.is-#{$name}
-        background-color: lighten($color, $color-lightning)
+        background-color: $color
         .accordion-header
           background-color: $color
           color: $color-invert
