--- a/themes/reportingPanelBulmaTheme.css
+++ b/themes/reportingPanelBulmaTheme.css
@@ -134,7 +134,7 @@ code {
   padding: 0.25em 0.5em 0.25em; }
 
 hr {
-  background-color: #dbdbdb;
+  background-color: #2F2F2F;
   border: none;
   display: block;
   height: 1px;
@@ -1520,7 +1520,7 @@ a.box:active {
     pointer-events: none; }
     .button.is-loading:after {
       animation: spinAround 500ms infinite linear;
-      border: 2px solid #dbdbdb;
+      border: 2px solid #2F2F2F;
       border-radius: 290486px;
       border-right-color: transparent;
       border-top-color: transparent;
@@ -1653,7 +1653,7 @@ a.box:active {
   margin-bottom: 1em; }
 .content blockquote {
   background-color: whitesmoke;
-  border-left: 5px solid #dbdbdb;
+  border-left: 5px solid #2F2F2F;
   padding: 1.25em 1.5em; }
 .content ol {
   list-style: decimal outside;
@@ -1695,7 +1695,7 @@ a.box:active {
   width: 100%; }
   .content table td,
   .content table th {
-    border: 1px solid #dbdbdb;
+    border: 1px solid #2F2F2F;
     border-width: 0 0 1px;
     padding: 0.5em 0.75em;
     vertical-align: top; }
@@ -2104,7 +2104,7 @@ a.box:active {
       width: 100%; }
   .select.is-loading::after {
     animation: spinAround 500ms infinite linear;
-    border: 2px solid #dbdbdb;
+    border: 2px solid #2F2F2F;
     border-radius: 290486px;
     border-right-color: transparent;
     border-top-color: transparent;
@@ -2366,12 +2366,12 @@ a.box:active {
     background-color: #eeeeee;
     color: #363636; }
   .file-label:hover .file-name {
-    border-color: #d5d5d5; }
+    border-color: #292929; }
   .file-label:active .file-cta {
     background-color: #e8e8e8;
     color: #363636; }
   .file-label:active .file-name {
-    border-color: #cfcfcf; }
+    border-color: #222222; }
 
 .file-input {
   height: 0.01em;
@@ -2400,7 +2400,7 @@ a.box:active {
   padding-top: calc(0.375em - 1px);
   position: relative;
   vertical-align: top;
-  border-color: #dbdbdb;
+  border-color: #2F2F2F;
   border-radius: 3px;
   font-size: 1em;
   padding-left: 1em;
@@ -2421,7 +2421,7 @@ a.box:active {
   color: #4a4a4a; }
 
 .file-name {
-  border-color: #dbdbdb;
+  border-color: #2F2F2F;
   border-style: solid;
   border-width: 1px 1px 1px 0;
   display: block;
@@ -2667,7 +2667,7 @@ a.box:active {
     right: 0; }
   .control.is-loading::after {
     animation: spinAround 500ms infinite linear;
-    border: 2px solid #dbdbdb;
+    border: 2px solid #2F2F2F;
     border-radius: 290486px;
     border-right-color: transparent;
     border-top-color: transparent;
@@ -2821,7 +2821,7 @@ a.box:active {
   .progress:not(:last-child) {
     margin-bottom: 1.5rem; }
   .progress::-webkit-progress-bar {
-    background-color: #dbdbdb; }
+    background-color: #2F2F2F; }
   .progress::-webkit-progress-value {
     background-color: #4a4a4a; }
   .progress::-moz-progress-bar {
@@ -3295,7 +3295,7 @@ a.tag:hover {
 
 .loader {
   animation: spinAround 500ms infinite linear;
-  border: 2px solid #dbdbdb;
+  border: 2px solid #2F2F2F;
   border-radius: 290486px;
   border-right-color: transparent;
   border-top-color: transparent;
@@ -3396,7 +3396,7 @@ a.tag:hover {
       overflow-y: hidden;
       max-height: 0;
       color: #4a4a4a;
-      border: 1px solid #dbdbdb;
+      border: 1px solid #2F2F2F;
       border-radius: 3px;
       border-top-left-radius: 0;
       border-top-right-radius: 0;
@@ -3597,7 +3597,7 @@ a.tag:hover {
   padding: 1.5rem; }
 
 .card-footer {
-  border-top: 1px solid #dbdbdb;
+  border-top: 1px solid #2F2F2F;
   align-items: stretch;
   display: flex; }
 
@@ -3610,7 +3610,7 @@ a.tag:hover {
   justify-content: center;
   padding: 0.75rem; }
   .card-footer-item:not(:last-child) {
-    border-right: 1px solid #dbdbdb; }
+    border-right: 1px solid #2F2F2F; }
 
 .card .media:not(:last-child) {
   margin-bottom: 0.75rem; }
@@ -3665,7 +3665,7 @@ a.dropdown-item {
     color: rgba(0, 0, 0, 0.7); }
 
 .dropdown-divider {
-  background-color: #dbdbdb;
+  background-color: #2F2F2F;
   border: none;
   display: block;
   height: 1px;
@@ -3751,7 +3751,7 @@ a.dropdown-item {
   .media .content:not(:last-child) {
     margin-bottom: 0.75rem; }
   .media .media {
-    border-top: 1px solid rgba(219, 219, 219, 0.5);
+    border-top: 1px solid rgba(47, 47, 47, 0.5);
     display: flex;
     padding-top: 0.75rem; }
     .media .media .content:not(:last-child),
@@ -3762,7 +3762,7 @@ a.dropdown-item {
       .media .media .media + .media {
         margin-top: 0.5rem; }
   .media + .media {
-    border-top: 1px solid rgba(219, 219, 219, 0.5);
+    border-top: 1px solid rgba(47, 47, 47, 0.5);
     margin-top: 1rem;
     padding-top: 1rem; }
   .media.is-large + .media {
@@ -3810,7 +3810,7 @@ a.dropdown-item {
       background-color: #72d0eb;
       color: rgba(0, 0, 0, 0.7); }
   .menu-list li ul {
-    border-left: 1px solid #dbdbdb;
+    border-left: 1px solid #2F2F2F;
     margin: 0.75em;
     padding-left: 0.75em; }
 
@@ -3942,7 +3942,7 @@ a.dropdown-item {
     border-top: none; }
 
 .message-body {
-  border: 1px solid #dbdbdb;
+  border: 1px solid #2F2F2F;
   border-radius: 3px;
   color: #4a4a4a;
   padding: 1em 1.25em; }
@@ -4078,7 +4078,7 @@ a.dropdown-item {
   position: relative; }
 
 .modal-card-head {
-  border-bottom: 1px solid #dbdbdb;
+  border-bottom: 1px solid #2F2F2F;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px; }
 
@@ -4092,7 +4092,7 @@ a.dropdown-item {
 .modal-card-foot {
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  border-top: 1px solid #dbdbdb; }
+  border-top: 1px solid #2F2F2F; }
   .modal-card-foot .button:not(:last-child) {
     margin-right: 10px; }
 
@@ -4619,7 +4619,7 @@ a.navbar-link.is-active {
     padding-right: 1.5rem; }
 
 .navbar-divider {
-  background-color: #dbdbdb;
+  background-color: #2F2F2F;
   border: none;
   display: none;
   height: 1px;
@@ -4661,7 +4661,7 @@ a.navbar-link.is-active {
   .navbar-item.has-dropdown-up .navbar-link::after {
     transform: rotate(135deg) translate(0.25em, -0.25em); }
   .navbar-item.has-dropdown-up .navbar-dropdown {
-    border-bottom: 1px solid #dbdbdb;
+    border-bottom: 1px solid #2F2F2F;
     border-radius: 5px 5px 0 0;
     border-top: none;
     bottom: 100%;
@@ -4706,7 +4706,7 @@ a.navbar-link.is-active {
     background-color: white;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    border-top: 1px solid #dbdbdb;
+    border-top: 1px solid #2F2F2F;
     box-shadow: 0 8px 8px rgba(10, 10, 10, 0.1);
     display: none;
     font-size: 0.875rem;
@@ -4814,7 +4814,7 @@ a.navbar-link.is-active {
   .navbar-item.has-dropdown-up .navbar-link::after {
     transform: rotate(135deg) translate(0.25em, -0.25em); }
   .navbar-item.has-dropdown-up .navbar-dropdown {
-    border-bottom: 1px solid #dbdbdb;
+    border-bottom: 1px solid #2F2F2F;
     border-radius: 5px 5px 0 0;
     border-top: none;
     bottom: 100%;
@@ -4859,7 +4859,7 @@ a.navbar-link.is-active {
     background-color: white;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    border-top: 1px solid #dbdbdb;
+    border-top: 1px solid #2F2F2F;
     box-shadow: 0 8px 8px rgba(10, 10, 10, 0.1);
     display: none;
     font-size: 0.875rem;
@@ -5102,13 +5102,13 @@ a.navbar-link.is-active {
 .panel-heading,
 .panel-tabs,
 .panel-block {
-  border-bottom: 1px solid #dbdbdb;
-  border-left: 1px solid #dbdbdb;
-  border-right: 1px solid #dbdbdb; }
+  border-bottom: 1px solid #2F2F2F;
+  border-left: 1px solid #2F2F2F;
+  border-right: 1px solid #2F2F2F; }
   .panel-heading:first-child,
   .panel-tabs:first-child,
   .panel-block:first-child {
-    border-top: 1px solid #dbdbdb; }
+    border-top: 1px solid #2F2F2F; }
 
 .panel-heading {
   background-color: whitesmoke;
@@ -5125,7 +5125,7 @@ a.navbar-link.is-active {
   font-size: 0.875em;
   justify-content: center; }
   .panel-tabs a {
-    border-bottom: 1px solid #dbdbdb;
+    border-bottom: 1px solid #2F2F2F;
     margin-bottom: -1px;
     padding: 0.5em; }
     .panel-tabs a.is-active {
@@ -5196,7 +5196,7 @@ label.panel-block {
     margin-bottom: 1.5rem; }
   .tabs a {
     align-items: center;
-    border-bottom-color: #dbdbdb;
+    border-bottom-color: #2F2F2F;
     border-bottom-style: solid;
     border-bottom-width: 1px;
     color: #4a4a4a;
@@ -5215,7 +5215,7 @@ label.panel-block {
       color: #72d0eb; }
   .tabs ul {
     align-items: center;
-    border-bottom-color: #dbdbdb;
+    border-bottom-color: #2F2F2F;
     border-bottom-style: solid;
     border-bottom-width: 1px;
     display: flex;
@@ -5245,16 +5245,16 @@ label.panel-block {
     border-radius: 3px 3px 0 0; }
     .tabs.is-boxed a:hover {
       background-color: whitesmoke;
-      border-bottom-color: #dbdbdb; }
+      border-bottom-color: #2F2F2F; }
   .tabs.is-boxed li.is-active a {
     background-color: white;
-    border-color: #dbdbdb;
+    border-color: #2F2F2F;
     border-bottom-color: transparent !important; }
   .tabs.is-fullwidth li {
     flex-grow: 1;
     flex-shrink: 0; }
   .tabs.is-toggle a {
-    border-color: #dbdbdb;
+    border-color: #2F2F2F;
     border-style: solid;
     border-width: 1px;
     margin-bottom: 0;
