--- a/themes/reportingPanelBulmaTheme.scss
+++ b/themes/reportingPanelBulmaTheme.scss
@@ -16,6 +16,7 @@ $primary: $dark;
 $warning: $orange;
 $danger: $red;
 $body-background-color: $dark;
+$border: #2F2F2F;
 
 // 6. Import the rest of Bulma
 @import "../bulma";
