Removed underline from links in accordion

--- a/sass/extensions/bulma-accordion.sass
+++ b/sass/extensions/bulma-accordion.sass
@@ -27,7 +27,7 @@ $accordion-content-pre-code-background-color: transparent !default
       color: currentColor
     a:not(.button):not(.tag)
       color: currentColor
-      text-decoration: underline
+      text-decoration: none
     // Sizes
     &.is-small
       font-size: $size-small
