Changed 'Light' color

--- a/themes/reportingPanelBulmaTheme.scss
+++ b/themes/reportingPanelBulmaTheme.scss
@@ -17,6 +17,7 @@ $warning: $orange;
 $danger: $red;
 $body-background-color: $dark;
 $border: #2F2F2F;
+$light: $light-grey;
 
 // 6. Import the rest of Bulma
 @import "../bulma";
